fix: status and address bar cropping on hero section

--- a/app/globals.css
+++ b/app/globals.css
@@ -45,13 +45,14 @@
   --breakpoint-sm: 510px;
 }
 
+html {
+  background-color: var(--secondary);
+}
+
 body {
   background: var(--secondary);
   color: var(--foreground);
   font-family: var(--font-dm-sans), sans-serif;
-  transition:
-    background-color 0.3s ease,
-    color 0.3s ease;
   overflow-x: hidden;
   width: 100vw;
 }
